      GSSAPI authentication is activated. This is counter intuitive, though,
      and requires several other fixes in the authentication code.
  * x2goclient.spec:
    - Always set BuildRoot: parameter.

  [ Sergey Savko ]
  * New upstream release (4.0.3.2):
    - Prevent passwordless re-logins into X2Go Session Broker if
      --broker-autologoff is used on the cmdline. (Fixes: #782).

  [ Heinrich Schuchardt ]
  * New upstream release (4.0.3.2):
    - Base the layout dialogue "Session ID" (which shows up when starting a
      connection) on typographic points (instead of pixels). (Fixes: #713).

  [ Jason Alavaliant ]
  * New upstream verson (4.0.3.2):
    - Use QUrl::toPercentEncoding() method to properly encode passwords sent
      to X2Go Session Broker. (Fixes: #705).

  [ Mike DePaulo ]
  * New upstream release (4.0.3.2):
    - Windows: Win32 OpenSSL updates from 1.0.1j to 1.0.1L, which
      fixes the CVEs announced on 2015-01-08.
    - Windows: Cygwin OpenSSL updated from 1.0.1j-1 to 1.0.1k-1, which
      fixes the CVEs announced on 2015-01-08.
    - Windows: Bundle new version of VcXsrv: 1.15.2.2-xp+vc2013+x2go1.
      The differences from 1.15.2.1-xp+vc2013+x2go1 are that its bundled
      OpenSSL has been updated to 1.0.1k, and that xorg-server
      CVE-2014-8091..8103 have been fixed.
    - Windows: Update libssh from 0.6.3 to 0.6.4 (while maintaining
      Pageant support). This fixes CVE-2014-8132, which shouldn't
      affect x2goclient because x2goclient uses the SSH client
      functionality, not the SSH server functionality.
      0.6.4 also added 4 features related to ECDSA keys.
    - Windows: Fix compatibility with PulseAudio 6.0
    - Windows: Remove workaround for audio input with old versions of
      PulseAudio (calling parec once per second)
      (Fixes: #742)
      Thanks George Trakatelis (uom.edu.gr) for submitting this change.
    - Windows: Enable X2Go Client for Windows to build under VS2010 nmake