@@ -261,6 +261,9 @@ Run a connectivity test against X2Go Session Broker. Not supported by all broker
 .TP
 \*(T<\fB\-\-change-broker-pass\fR\*(T>
 Send a change-password request to an X2Go Session Broker. Not supported by all broker implementations.
+.TP
+\*(T<\fB\-\-broker-noauth-with-session-username\fR\*(T>
+Informs the broker to use the username you entered for X2Go Server authentication when selecting a server/session. Only has functionality if --broker-noauth is used.
 
 .SH LDAP OPTIONS (deprecated)
 NOTE: LDAP support won't be continued in X2Go Client 2 (next generation of X2Go Client). 
